--- a/composer.json
+++ b/composer.json
@@ -10,10 +10,11 @@
         }
     ],
     "require": {
-        "php": "^5.5 | ^5.6 | ^7.0 | ^7.1 | ^7.2 | ^7.3 | ^7.4 | ^8.0 | ^8.1 | ^8.2"
+        "php": ">=5.5",
+        "ext-json": "*"
     },
     "require-dev": {
-        "phpunit/phpunit": "^4 | ^5 | ^6 | ^7 | ^8 | ^9"
+        "phpunit/phpunit": ">=4"
     },
     "autoload": {
         "psr-4": {
@@ -28,5 +29,7 @@
     "config": {
         "optimize-autoloader": true,
         "sort-packages": true
-    }
+    },
+    "minimum-stability": "dev",
+    "prefer-stable": true
 }
