--- a/.gitattributes
+++ b/.gitattributes
@@ -1,6 +1,8 @@
 * text=auto
 /tests/fixtures/basic-crlf.ndjson text eol=crlf
 /tests/fixtures/basic-lf.ndjson text eol=lf
+/tests/fixtures/empty-line-crlf.ndjson text eol=crlf
+/tests/fixtures/empty-line-lf.ndjson text eol=lf
 
 /.gitattributes export-ignore
 /.github export-ignore
