--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -8,29 +8,36 @@ on:
 
 jobs:
   test:
-    name: Test
-
-    runs-on: ubuntu-latest
-
+    runs-on: ${{ matrix.os }}
     strategy:
+      fail-fast: false
       matrix:
-        php-version: [
+        os: [ ubuntu-latest ]
+        php: [
           '5.5', '5.6',
           '7.0', '7.1', '7.2', '7.3', '7.4',
           '8.0', '8.1', '8.2'
         ]
 
+    name: PHP ${{ matrix.php }}
+
     steps:
       - name: Setup PHP ${{ matrix.php-version }}
         uses: shivammathur/setup-php@v2
         with:
-          php-version: ${{ matrix.php-version }}
+          php-version: ${{ matrix.php }}
+          ini-values: error_reporting=E_ALL
+          tools: composer:v2
 
       - name: Checkout
         uses: actions/checkout@v3
 
       - name: Install dependencies
         run: composer install --quiet --no-ansi --prefer-dist --no-progress --no-interaction
+
+      - name: Migrate phpunit XML configuration
+        continue-on-error: true
+        run: vendor/bin/phpunit --migrate-configuration
 
       - name: Run test suite
         run: vendor/bin/phpunit --coverage-clover=coverage.xml
