--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -37,7 +37,12 @@ jobs:
         uses: actions/checkout@v4
 
       - name: Install dependencies
-        run: composer install --quiet --no-ansi --prefer-dist --no-progress --no-interaction
+        uses: nick-fields/retry@v3
+        with:
+          timeout_seconds: 30
+          max_attempts: 3
+          command: |
+            composer install --quiet --no-ansi --prefer-dist --no-progress --no-interaction
 
       - name: Migrate phpunit XML configuration
         run: vendor/bin/phpunit --migrate-configuration || true
